<resources>
    <string name="app_name">微信</string>
    <string name="czjtxy">沧州交通学院</string>
    <string name="phonestr">手机号：</string>
    <string name="phone_hint">请输入用户手机号</string>
    <string name="smscodestr">验证码：</string>
    <string name="sms_hint">请输入手机验证码</string>
    <string name="send_sms">发送验证码</string>
    <string name="loginstr">登录</string>
    <string name="forgetpwdstr">忘记密码？</string>
    <string name="signupstr">新用户注册</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="home">首页</string>
    <string name="contracts">联系人</string>
    <string name="discover">发现</string>
    <string name="mine">我的</string>
</resources>