<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/common_page_padding"
    tools:context=".activity.LoginActivity">
    <!--vertical：垂直方向上的布局-->

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/icon_jd" />

    <!--手机号控件行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phonestr"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_phonenum"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:inputType="phone" />
    </LinearLayout>

    <!--验证码控件行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smscodestr"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_smscode"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/sms_hint"
            android:inputType="phone" />

        <Button
            android:id="@+id/btn_sendsms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rectange"
            android:text="@string/send_sms" />
    </LinearLayout>

    <!--登录按钮行-->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/loginstr"
        android:textSize="18sp"
        android:padding="@dimen/dp_10"
        android:background="@drawable/shape_rectange"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30"/>

    <!--忘记密码和新用户注册-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="center_horizontal"
        android:weightSum="2"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_forgetpwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:text="@string/forgetpwdstr"/>
        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:text="@string/signupstr"/>
    </LinearLayout>
</LinearLayout>