<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="5dp"
        android:text="微信"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <!--要展示的碎片的空间-->
    <FrameLayout
        android:id="@+id/view_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/img_wechat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/home"
            android:text="@string/home"
            android:textAlignment="center"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/img_contracts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/contracts"
            android:textAlignment="center"
            android:drawableTop="@mipmap/contract"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/img_discover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/discover"
            android:textAlignment="center"
            android:drawableTop="@mipmap/discover"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/img_mine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mine"
            android:textAlignment="center"
            android:drawableTop="@mipmap/mine"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>